repair lines befor add overflow hidden page whan menu open

--- a/source/sass/bloks/gallery/gallery.scss
+++ b/source/sass/bloks/gallery/gallery.scss
@@ -195,9 +195,6 @@
   padding: 0 20px;
 }
 
-.gallery__list-card:last-child .gallery__card-description {
-  margin-bottom: 0;
-}
 
 // tablet gallery text
 
