--- a/source/sass/bloks/project/prodject-base.scss
+++ b/source/sass/bloks/project/prodject-base.scss
@@ -29,6 +29,9 @@
   overflow-x: hidden;
 }
 
+.page__body--menu {
+  overflow: hidden;
+}
 
 // page body catalog
 
